# compat-db-rewrite

./: .gitignore  .travis.yml  Cargo.toml  README.md  db.sqlite  records.json
compat_tests/: compat.rs  mod.rs
migrations/2017-12-26-100410_create_tmp_records/: down.sql  up.sql
migrations/2017-12-26-100415_create_job_queue/: down.sql  up.sql
src/: assertion_formatter.rs  constants.rs  generate_versions.rs  has_prefix.rs  job_queue_database.rs  json-write.rs  json_write.rs  main.rs  moo  moo.rs  multiple_assertion_formatter.rs  record.rs  test_initiator.rs  tmp_records_database.rs
src/assertions/: assertion_formatter.rs  mod.rs  multiple_assertion_formatter.rs
src/database/: compat-db.sqlite  job_queue_database.rs  mod.rs  schema.rs  tmp_records_database.rs
src/database/models/: job_queue_model.rs  mod.rs  tmp_record_model.rs
src/helpers/: generate_versions.rs  mod.rs
