[package]
name = "compat-db-rewrite"
version = "0.1.0"
authors = ["Amila Welihinda <amilajack@gmail.com>"]

[dependencies]
# diesel = { version = "1.0.0-rc1", features = ["sqlite"] }
dotenv = "0.9.0"
log = "0.3"
rusqlite = "*"
time = "*"
hyper = "0.11"
reqwest = "0.8.2"
serde = "1.0.16"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1.14"
tokio-core = "0.1"
spinners = "*"
rayon = "0.9"
liquid = "0.13"
